src/styles/ag-grid.scss
// nib is important, as it gets stylus to include variations on the CSS for browsers.
// eg 'user-select' gets compiled to versions '-webkit-user-select, -moz-user-select, -ms-user-select'
//@import 'nib';
// if we don't do this, then the width and height of the grid would be ignored,
// as there is no default display for the element ag-grid-a2 (as it's not a natural dom element)
ag-grid-angular {
    display: inline-block;
}
ag-grid-ng2 {
    display: inline-block;
}
ag-grid {
    display: block;
}
ag-grid-polymer {
    display: block;
}
ag-grid-aurelia {
    display: block;
}
.ag-rtl {
    //text-align right
    direction: rtl;
}
.ag-ltr {
    //text-align left
    direction: ltr;
}
.ag-select-agg-func-popup {
    position: absolute;
}
// when we drag the mouse in ag-Grid, this class gets added / removed from the body, so that
// the mouse isn't selecting text when dragging.
.ag-body-no-select {
    user-select: none;
}

.ag-root {
    /* set to relative, so absolute popups appear relative to this */
    position: relative;
    box-sizing: border-box;
    /* was getting some 'should be there' scrolls, this sorts it out */
    overflow: hidden;
}
.ag-layout-normal .ag-root {
    height: 100%;
}
.ag-font-style {
    cursor: default;
    /* disable user mouse selection */
    user-select: none;
}
.ag-layout-for-print {
    white-space: nowrap;
    display: inline-block;
}
.ag-layout-normal {
    height: 100%;
}
.ag-layout-auto-height {}
//
.ag-popup-backdrop {
    position: fixed;
    left: 0px;
    top: 0px;
    width: 100%;
    height: 100%;
}
.ag-header {
    white-space: nowrap;
    box-sizing: border-box;
    overflow: hidden;
    width: 100%;
}
.ag-layout-normal .ag-header {
    position: absolute;
    top: 0px;
    left: 0px;
}
.ag-pinned-left-header {
    float: left;
    box-sizing: border-box;
    display: inline-block;
    overflow: hidden;
    height: 100%;
}
.ag-pinned-right-header {
    float: right;
    box-sizing: border-box;
    display: inline-block;
    overflow: hidden;
    height: 100%;
}
.ag-header-viewport {
    box-sizing: border-box;
    overflow: hidden;
    height: 100%;
}
.ag-layout-normal .ag-header-row {
    position: absolute;
}
.ag-layout-normal .ag-header-container {
    box-sizing: border-box;
    position: relative;
    white-space: nowrap;
    height: 100%;
}
.ag-layout-auto-height .ag-header-row {
    position: absolute;
}
.ag-layout-auto-height .ag-header-container {
    box-sizing: border-box;
    position: relative;
    white-space: nowrap;
    height: 100%;
}
.ag-layout-for-print .ag-header-container {
    white-space: nowrap;
}
.ag-header-overlay {
    display: block;
    position: absolute;
}
.ag-header-cell {
    box-sizing: border-box;
    vertical-align: bottom;
    display: inline-block;
    height: 100%;
    position: absolute;
    //float left // safari doesn't align if we don't float
}
.ag-floating-filter {
    box-sizing: border-box;
    position: absolute;
    display: inline-block;
}
.ag-floating-filter-body {
    margin-right: 25px;
    height: 20px;
}
.ag-floating-filter-full-body {
    width: 100%;
    height: 20px;
}

.ag-floating-filter-input {
    width: 100%;
}
.ag-floating-filter-input:read-only {
    background-color: #eeeeee;
}
.ag-floating-filter-menu {
    position: absolute;
    user-select: none;
}
// the ghost header cell doesn't live inside the grid, it's parent is the body element,
// so we cannot style using standard themes. hence we break the rules, and style it here
.ag-dnd-ghost {
    font-size: 14px;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    position: absolute;
    background: #e5e5e5;
    border: 1px solid black;
    cursor: move;
    user-select: none;
    box-sizing: border-box;
    overflow: hidden;
    text-overflow: ellipsis;
    padding: 3px;
    line-height: 1.4;
    //img
    //    vertical-align: middle;
    //    border: 0px;
}
.ag-dnd-ghost-icon {
    display: inline-block;
    float: left;
    padding: 2px;
}

.ag-dnd-ghost-label {
    display: inline-block;
}
.ag-header-group-cell {
    height: 100%;
    display: inline-block;
    box-sizing: border-box;
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    //float: left // safari doesn't align if we don't float
}
// we needed to have display of table-cell below,
// as with inline-block, the layout messed up in Safari (not problems in the others).
.ag-header-group-cell-label {
    //display table-cell
    text-overflow: ellipsis;
    overflow: hidden;
}
.ag-header-cell-label {
    text-overflow: ellipsis;
    overflow: hidden;
}
.ag-header-cell-resize {
    height: 100%;
    width: 4px;
    cursor: col-resize;
}
.ag-ltr .ag-header-cell-resize {
    float: right;
}
.ag-ltr .ag-pinned-right-header .ag-header-cell-resize {
    float: left;
}
.ag-rtl .ag-header-cell-resize {
    float: left;
}
.ag-rtl .ag-pinned-left-header .ag-header-cell-resize {
    float: right;
}
.ag-ltr .ag-header-select-all {
    float: left;
}
.ag-rtl .ag-header-select-all {
    float: right;
}
.ag-header-expand-icon {
    padding-left: 4px;
}
.ag-header-cell-menu-button {
    float: right;
}
.ag-overlay-panel {
    display: table;
    width: 100%;
    height: 100%;
    pointer-events: none;
}
.ag-overlay-wrapper {
    display: table-cell;
    vertical-align: middle;
    text-align: center;
}
.ag-bl-overlay {
    pointer-events: none;
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0px;
    left: 0px;
}
.ag-overlay-loading-center {}
//
.ag-bl-full-height {
    height: 100%;
    overflow: auto;
    position: relative;
}
.ag-bl-west {
    float: left;
}
.ag-bl-full-height-west {
    height: 100%;
}
.ag-bl-east {
    float: right;
}
.ag-bl-full-height-east {
    height: 100%;
}
.ag-bl-full-height-center {
    height: 100%;
}
.ag-bl-normal {
    height: 100%;
    position: relative;
}
.ag-bl-normal-center-row {
    height: 100%;
    overflow: hidden;
}
.ag-bl-normal-west {
    height: 100%;
    float: left;
}
/* ... */

